--- a/dapp/package.json
+++ b/dapp/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@starknet-react/chains": "^3.1.3",
     "@starknet-react/core": "^3.7.4",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
